--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -1357,5 +1357,577 @@ int triangleNumber(int* nums, int numsSize){
 
 ## leetcode刷题——07——二位数组
 
+# 2022.03.12
+
+### 1、[统计有序矩阵中的负数](https://leetcode-cn.com/problems/count-negative-numbers-in-a-sorted-matrix/)
+
+```C
+int countNegatives(int** grid, int gridSize, int* gridColSize){
+    int r=gridSize, l=gridColSize[0];
+    int ans=0;
+    for(int i=0; i<r; i++){
+        for(int j=0; j<l; j++){
+            if(grid[i][j]<0)
+                ans++;
+        }
+    }
+    return ans;
+}
+```
+
+### 2、[矩阵对角线元素的和](https://leetcode-cn.com/problems/matrix-diagonal-sum/)
+
+```C
+int diagonalSum(int** mat, int matSize, int* matColSize){
+    int r=matSize, l=matColSize[0];
+    int result=0;
+    for(int i=0; i<r; i++){
+        result += mat[i][i] + mat[i][r-1-i];
+    }
+    if(r%2==1)
+        result -= mat[r/2][r/2];
+    return result;
+}
+```
+
+### 3、[最富有客户的资产总量](https://leetcode-cn.com/problems/richest-customer-wealth/)
+
+```C
+int maximumWealth(int** accounts, int accountsSize, int* accountsColSize){
+    int r=accountsSize;
+    int max=0;
+    for(int i=0; i<r; i++){
+        int all=0;
+        for(int j=0; j<accountsColSize[i]; j++)
+            all += accounts[i][j];
+        if(max < all)
+            max=all;
+    }
+    return max;
+}
+```
+
+### 4、[托普利茨矩阵](https://leetcode-cn.com/problems/toeplitz-matrix/)
+
+```C
+bool isToeplitzMatrix(int** matrix, int matrixSize, int* matrixColSize){
+    int r=matrixSize, l=matrixColSize[0];
+    int i,j;
+    for(i=0; i<l-1; i++)
+        for(int tmp=i; tmp<l-1; tmp++)
+            if(tmp-i<r-1)
+                if(matrix[tmp-i][tmp] != matrix[tmp-i+1][tmp+1])
+                    return false;
+    for(j=1; j<r-1; j++)
+        for(int tmp=j; tmp<r-1; tmp++)
+            if(tmp-j<l-1)
+                if(matrix[tmp][tmp-j] != matrix[tmp+1][tmp+1-j])
+                    return false;
+    return true;
+}
+```
+
+### 5、[矩阵中的幸运数](https://leetcode-cn.com/problems/lucky-numbers-in-a-matrix/)
+
+```C
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int min(int a, int b){
+    return a<b ? a : b;
+}
+int max(int a, int b){
+    return a>b ? a : b;
+}
+
+int* luckyNumbers (int** matrix, int matrixSize, int* matrixColSize, int* returnSize){
+    int r=matrixSize, c=matrixColSize[0];
+    int *ret=(int *)malloc(sizeof(int)*r*c);
+    *returnSize=2;
+    int rmin[r], cmax[c];
+    
+    
+    for(int i=0; i<r; i++){
+        rmin[i]=matrix[i][0];
+        for(int j=1; j<c; j++){
+            rmin[i]=min(rmin[i], matrix[i][j]);
+        }
+    }
+    for(int j=0; j<c; j++){
+        cmax[j]=matrix[0][j];
+        for(int i=1; i<r; i++){
+            cmax[j]=max(cmax[j], matrix[i][j]);
+        }
+    }
+    *returnSize = 0;
+    for(int j=0; j<c; j++){
+        for(int i=0; i<r; i++){
+            if(rmin[i]==cmax[j])
+                ret[ (*returnSize)++ ] = rmin[i]; 
+        }
+    }
+    return ret;
+}
+```
+
+### 6、[二进制矩阵中的特殊位置](https://leetcode-cn.com/problems/special-positions-in-a-binary-matrix/)
+
+```C
+int numSpecial(int** mat, int matSize, int* matColSize){
+    int r=matSize, c=matColSize[0], ans=0;
+    
+    int rdata[r], cdata[c];
+    for(int i=0; i<r; i++){		//筛选所有只包含一个1的行，并把1出现的位置加5后存在rdata[i]中
+        rdata[i]=0;
+        for(int j=0; j<c; j++)
+            if(mat[i][j]==1)
+                if(rdata[i]==0)
+                    rdata[i]=j+5;
+                else{
+                    rdata[i]=0;
+                    break;
+                } 
+    }
+    
+    for(int i=0; i<r; i++){
+        int sum=0;
+        if(rdata[i]){	//判断符合条件的行，是否满足所在列没有其他1的条件
+            for(int j=0; j<r; j++)
+                sum += mat[j][rdata[i]-5];
+            if(sum != 1)
+                sum = 0;
+        }
+        ans += sum;
+    }
+    return ans;        
+}
+```
+
+### 7、[岛屿的周长](https://leetcode-cn.com/problems/island-perimeter/)
+
+```C
+int islandPerimeter(int** grid, int gridSize, int* gridColSize){
+    int r=gridSize+2, c=gridColSize[0]+2;
+
+    int ** new=(int **)malloc(sizeof(int *) * r);
+    for(int i=0; i<r; i++)
+        *(new+i) = malloc(sizeof(int) * c);
+    int i=0, j=0, ans=0;
+
+    while(i<r){
+        new[i][0]=0;
+        new[i][c-1]=0;
+        i++;
+    }
+    i=0;
+    while(i<c){
+        new[0][i]=0;
+        new[r-1][i]=0;
+        i++;
+    }
+    for( i=0; i<r-2; i++)
+        for( j =0; j<c-2; j++)
+            new[i+1][j+1]=grid[i][j];
+
+    for(i=1; i < r-1; i++){
+        for( j=1; j<c-1; j++){
+            if(new[i][j])
+                ans =ans + 4-(new[i-1][j] + new[i+1][j] + new[i][j-1] + new[i][j+1]);
+        }
+    }
+    return ans;
+}
+```
+
+# 2022.03.13
+
+## leetcode刷题——08——二级指针
+
+
+
+### LeetCode题目中二级指针的含义
+
+```C
+int** func(int** matrix, int matrixSize, int* matrixColSize, int* returnSize, int** returnColumnSizes){
+}
+```
+
+| 参数                | 变量类型 | 含义                                                         |
+| ------------------- | -------- | ------------------------------------------------------------ |
+| matrix              | 二级指针 | 传入的矩阵首地址                                             |
+| matrixSize          | 普通变量 | 传入的矩阵的行数                                             |
+| matrixColSize     | 一级指针 | 传入矩阵每行的列数（注意是每行，所以是数组）                 |
+| returnSize        | 一级指针 | 传出矩阵的行数，由于需要作为参数返回，所以用指针取地址       |
+| returnColumnSizes | 二级指针 | 传出矩阵的每行的列数，由于需要作为数组参数返回，所以用二级指针 |
+
+### 二维数组的内存申请模板
+
+```C
+int **myMalloc(int r, int c, int* returnSize, int** returnColumnSizes) {
+    int i;
+    int **ret = (int **)malloc( sizeof(int *) * r );        // (1)
+    *returnColumnSizes = (int *)malloc( sizeof(int) * r );  // (2)
+    *returnSize = r;                                        // (3)
+    for(i = 0; i < r; ++i) {
+        ret[i] = (int *)malloc( sizeof(int) * c );          // (4)
+        (*returnColumnSizes)[i] = c;                        // (5)
+    }    
+    return ret;
+}
+/*
+(1) 申请一个矩阵（二维数组）的内存，行数为 r，首地址为ret，二维数组的类型为int **，二维数组中每个元素的类型为一级指针，即int *，对应sizeof(int *)这个表达式；
+(2) 为这个矩阵的列申请一个数组来记录它每一行的列数，所以这个列数组的长度应该是行数r，由于需要作为参数返回给调用方，所以这里调用了一次解引用；
+(3) *returnSize是需要返回的矩阵的行数，调用者不知道这个功能返回的矩阵有多少行，需要实现者告诉他，同样调用一次解引用；
+(4) 申请矩阵每一行的内存空间，每一行的长度为c，即列数；
+(5) 每一行的列数长度需要作为返回值返回，所以需要先解引用再索引到行号，即给(*returnColumnSizes)进行赋值；
+*/
+```
+
+### 1、[翻转图像](https://leetcode-cn.com/problems/flipping-an-image/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int ** myMalloc(int r, int c, int* returnSize, int** returnColumnSizes){
+    int i;
+    int ** ret = (int **)malloc(sizeof(int *) * r);
+    *returnColumnSizes = (int *)malloc(sizeof(int) *r);
+    *returnSize = r;
+     for(i=0; i<r; i++){
+         ret[i]=(int *)malloc(sizeof(int) * c);
+         (*returnColumnSizes)[i] = c;
+     }
+     return ret;
+}
+
+int** flipAndInvertImage(int** image, int imageSize, int* imageColSize, int* returnSize, int** returnColumnSizes){
+    int i,j;
+    int r=imageSize, c=imageColSize[0];
+    int ** ret=myMalloc(r, c, returnSize, returnColumnSizes);
+    for(i=0; i<r; i++)
+        for(j=0; j<c; j++)
+            ret[i][j]=1-image[i][c-1-j];
+    return ret;
+}
+```
+
+### 2、[转置矩阵](https://leetcode-cn.com/problems/transpose-matrix/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int ** myMalloc(int r, int c, int *returnSize, int ** returnColumnSizes){
+    int i;
+    int ** ret=(int **)malloc(sizeof(int *)*r);
+    *returnColumnSizes = (int *)malloc(sizeof(int)*r);
+    *returnSize=r;
+
+    for(i=0; i<r; i++){
+        ret[i]=(int *)malloc(sizeof(int) * c);
+        (*returnColumnSizes)[i]=c;
+    }
+    return ret;
+}
+int** transpose(int** matrix, int matrixSize, int* matrixColSize, int* returnSize, int** returnColumnSizes){
+    int r=matrixSize, c=matrixColSize[0];
+    int **ret=myMalloc(c, r, returnSize, returnColumnSizes);
+    for(int i=0; i<c; i++)
+        for(int j=0; j<r; j++){
+            ret[i][j]=matrix[j][i];
+        }
+    return ret;
+}
+```
+
+### 3、[重塑矩阵](https://leetcode-cn.com/problems/reshape-the-matrix/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int ** mymalloc(int r, int c, int *returnSize, int ** returnColumnSizes){
+    *returnSize = r;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int ** ret=(int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        ret[i]=(int *)malloc(sizeof(int)*c);
+        (*returnColumnSizes)[i]=c;
+    }
+    return ret;
+}
+int** matrixReshape(int** mat, int matSize, int* matColSize, int r, int c, int* returnSize, int** returnColumnSizes){
+    int m = matSize, n = matColSize[0], id=0;
+    int ** ret=mymalloc(r, c, returnSize, returnColumnSizes);
+    if(n*m != r*c){
+        *returnSize = m;
+        for(int i=0; i<m; i++)
+            (*returnColumnSizes)[i]=n;
+        return mat;
+    }
+
+
+    for(int i=0; i<r; i++)
+        for(int j=0; j<c; j++){
+            id=i*c+j;
+            ret[i][j]=mat[id/n][id%n];
+        }
+    return ret;
+}
+```
+
+### 4、[将一维数组转变成二维数组](https://leetcode-cn.com/problems/convert-1d-array-into-2d-array/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int ** myMalloc(int r, int c, int * returnSize, int ** returnColumnSizes){
+    *returnSize=r;    
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int **ret=(int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        ret[i]=(int *)malloc(sizeof(int)*c);
+        (*returnColumnSizes)[i]=c;
+    }
+    return ret;
+}
+int** construct2DArray(int* original, int originalSize, int m, int n, int* returnSize, int** returnColumnSizes){
+    int ** ret;
+    if(n*m != originalSize){
+        *returnSize=0;
+        return ret;
+    }
+    ret=myMalloc(m, n, returnSize, returnColumnSizes);
+    for(int i=0; i<m; i++)
+        for(int j=0; j<n; j++)
+            ret[i][j]=original[i*n+j];
+    return ret;
+}
+```
+
+### 5、[二维网格迁移](https://leetcode-cn.com/problems/shift-2d-grid/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int **myMalloc(int r, int c, int * returnSize, int ** returnColumnSizes){
+    *returnSize=r;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int ** ret=(int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        (*returnColumnSizes)[i]=c;
+        ret[i]=(int *)malloc(sizeof(int)*c);
+    }
+    return ret;
+}
+int** shiftGrid(int** grid, int gridSize, int* gridColSize, int k, int* returnSize, int** returnColumnSizes){
+    int r=gridSize, c=gridColSize[0], id;
+    int **ret = myMalloc(r, c, returnSize, returnColumnSizes);
+    for(int i=0; i<r; i++)
+        for(int j=0; j<c; j++){
+            id= i*c+j-k;
+            while(id<0)
+                id += r*c;
+            ret[i][j]=grid[id/c][id%c];
+        }
+    return ret;
+}
+
+/*------------*/
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int **myMalloc(int r, int c, int * returnSize, int ** returnColumnSizes){
+    *returnSize=r;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int ** ret=(int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        (*returnColumnSizes)[i]=c;
+        ret[i]=(int *)malloc(sizeof(int)*c);
+    }
+    return ret;
+}
+int** shiftGrid(int** grid, int gridSize, int* gridColSize, int k, int* returnSize, int** returnColumnSizes){
+    int r=gridSize, c=gridColSize[0], id;
+    int **ret = myMalloc(r, c, returnSize, returnColumnSizes);
+    k=k%(r*c);
+    for(int i=0; i<r; i++)
+        for(int j=0; j<c; j++){
+            id= i*c+j-k;
+            if(id<0)
+                id += (r*c);
+            ret[i][j]=grid[id/c][id%c];
+        }
+    return ret;
+}
+```
+
+### 6、[图片平滑器](https://leetcode-cn.com/problems/image-smoother/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int **myMalloc(int r, int c, int * returnSize, int ** returnColumnSizes){
+    *returnSize=r;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int ** ret=(int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        (*returnColumnSizes)[i]=c;
+        ret[i]=(int *)malloc(sizeof(int *)*c);
+    }
+    return ret;
+}
+int** imageSmoother(int** img, int imgSize, int* imgColSize, int* returnSize, int** returnColumnSizes){
+    int r=imgSize, c=imgColSize[0];
+    int ** ret=myMalloc(r, c, returnSize, returnColumnSizes);
+    
+    if(c>1 && r>1){
+        for(int i; i<r; i++)
+            for(int j=0; j<c; j++){
+                //第一行
+                if(i==0 && j==0)
+                    ret[0][0]=(img[0][0]+img[0][1]+img[1][0]+img[1][1])/4;
+                else if(i==0 && j==c-1)
+                    ret[0][c-1]=(img[0][c-2]+img[0][c-1]+img[1][c-2]+img[1][c-1])/4;
+                else if(i==0)
+                    ret[0][j]=(img[0][j-1]+img[0][j]+img[0][j+1]+img[1][j-1]+img[1][j]+img[1][j+1])/6;
+                //第一列
+                else if(i<r-1 && j==0)
+                    ret[i][0]=(img[i-1][0]+img[i][0]+img[i+1][0]+img[i-1][1]+img[i][1]+img[i+1][1])/6;
+                //中间
+                else if(i<r-1 && j>0 && j<c-1)
+                    ret[i][j]=(img[i-1][j-1]+img[i-1][j]+img[i-1][j+1]+img[i+1][j-1]+img[i+1][j]+img[i+1][j+1]+img[i][j-1]+img[i][j]+img[i][j+1])/9;
+                //最后一列
+                else if(i<r-1 && j == c-1)
+                    ret[i][c-1]=(img[i-1][c-1]+img[i][c-1]+img[i+1][c-1]+img[i-1][c-2]+img[i][c-2]+img[i+1][c-2])/6;
+                //最后一行
+                else if(i==r-1){
+                    if(j==0)
+                        ret[r-1][0]=(img[r-2][0]+img[r-2][1]+img[r-1][0]+img[r-1][1])/4;
+                    else if(j == c-1)
+                        ret[r-1][c-1]=(img[r-2][c-2]+img[r-2][c-1]+img[r-1][c-2]+img[r-1][c-1])/4;
+                    else    
+                        ret[r-1][j]=(img[r-1][j-1]+img[r-1][j]+img[r-1][j+1]+img[r-2][j-1]+img[r-2][j]+img[r-2][j+1])/6;
+
+                }
+            }
+    }else if(r==1 && c==1){
+        ret[0][0]=img[0][0];
+    }else if(r==1){
+        int i=0;
+        for(int j=0; j<c; j++){
+            if(j==0)
+                ret[i][j]=(img[i][j]+img[i][j+1])/2;
+            else if(j<c-1)
+                ret[i][j]=(img[i][j-1]+img[i][j]+img[i][j+1])/3;
+            else
+                ret[i][j]=(img[i][j]+img[i][j-1])/2;
+        }
+    }else if(c==1){
+        int j=0;
+        for(int i=0; i<r; i++){
+            if(i==0)
+                ret[i][j]=(img[i+1][j]+img[i][j])/2;
+            else if(i<r-1)
+                ret[i][j]=(img[i-1][j]+img[i+1][j]+img[i][j])/3;
+            else
+                ret[i][j]=(img[i-1][j]+img[i][j])/2;
+        }
+    }
+
+    return ret;
+}
+```
+
+### 7、[矩阵区域和](https://leetcode-cn.com/problems/matrix-block-sum/)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int ** myMalloc(int r, int c, int * returnSize, int ** returnColumnSizes){
+    *returnSize=r;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+    int ** ret = (int **)malloc(sizeof(int *)*r);
+    for(int i=0; i<r; i++){
+        (*returnColumnSizes)[i]=c;
+        ret[i]=(int *)malloc(sizeof(int)*c);
+    }
+    return ret;
+}
+int the_sum(int** mat, int r, int c, int k, int i, int j){
+    int sum=0, left=i-k, right=i+k, up=j-k, down=j+k;
+    for(int p=0; p<r; p++)
+        for(int q=0; q<c; q++)
+            if(left<=p && p<=right && up<=q && q<=down)
+                sum+=mat[p][q];
+    return sum;
+}
+int** matrixBlockSum(int** mat, int matSize, int* matColSize, int k, int* returnSize, int** returnColumnSizes){
+    int r=matSize, c=matColSize[0];
+    int **ret=myMalloc(r, c, returnSize, returnColumnSizes);
+    for(int i=0; i<r; i++){
+        for(int j=0; j<c; j++){
+            ret[i][j]=the_sum(mat, r, c, k ,i ,j);
+        }
+    }
+    return ret;
+}
+```
+
+### 8、[距离顺序排列矩阵单元格](https://leetcode-cn.com/problems/matrix-cells-in-distance-order/)
+
+```C
+int r0, c0;
+
+int cmp(void* _a, void* _b) {
+    int *a = *(int**)_a, *b = *(int**)_b;
+    return fabs(a[0] - r0) + fabs(a[1] - c0) - fabs(b[0] - r0) - fabs(b[1] - c0);
+}
+
+int** allCellsDistOrder(int rows, int cols, int rCenter, int cCenter, int* returnSize, int** returnColumnSizes) {
+    r0 = rCenter, c0 = cCenter;
+    //分配空间
+    int** ret = malloc(sizeof(int*) * rows * cols);
+    *returnColumnSizes = malloc(sizeof(int) * rows * cols);
+    for (int i = 0; i < rows * cols; i++) {
+        (*returnColumnSizes)[i] = 2;
+        ret[i] = malloc(sizeof(int) * 2);
+    }
+
+    *returnSize = 0;
+    
+    for (int i = 0; i < rows; i++) {
+        for (int j = 0; j < cols; j++) {
+            ret[*returnSize][0] = i;
+            ret[*returnSize][1] = j;
+            (*returnSize)++;
+        }
+    }
+    qsort(ret, rows * cols, sizeof(int*), cmp);
+    return ret;
+}
+```
+
 
 
