--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -1929,5 +1929,199 @@ int** allCellsDistOrder(int rows, int cols, int rCenter, int cCenter, int* retur
 }
 ```
 
+# 2022.03.14
 
+## leetcode刷题——09——简单递归
+
+### 1、[阶乘后的零](https://leetcode-cn.com/problems/factorial-trailing-zeroes/)
+
+```C
+int trailingZeroes(int n){
+    if(n<5)
+        return 0;
+    return n/5+trailingZeroes(n/5);
+}
+```
+
+### 2、[将数字变成 0 的操作次数](https://leetcode-cn.com/problems/number-of-steps-to-reduce-a-number-to-zero/)
+
+```C
+int numberOfSteps(int num){
+    if(num==0)
+        return 0;
+    if(num%2)
+        return numberOfSteps(num-1)+1;
+    else
+        return numberOfSteps(num/2)+1;
+}
+```
+
+### 3、[完全二叉树的节点个数](https://leetcode-cn.com/problems/count-complete-tree-nodes/)
+
+```C
+int countNodes(struct TreeNode* root){
+    if(root == NULL)
+        return 0;
+    return countNodes(root->left)+countNodes(root->right)+1;
+}
+```
+
+### 4、[开幕式焰火](https://leetcode-cn.com/problems/sZ59z6/)
+
+```C
+int Hash[1024];
+
+void transfer(struct TreeNode * root){
+    if(root){
+        Hash[root->val] = 1;
+        transfer(root->left);
+        transfer(root->right);
+    }
+}
+
+int numColor(struct TreeNode* root){
+    int i, sum=0;
+    memset(Hash, 0, sizeof(Hash));
+    transfer(root);
+    for(i=0; i<=1000; i++)
+        if(Hash[i])
+            sum++;
+    return sum;
+}
+```
+
+### 5、[整数替换](https://leetcode-cn.com/problems/integer-replacement/)
+
+```C
+int sum=0;
+int min(int a, int b){
+    return a<b ? a: b;
+}
+int integerReplacement(int n){
+    if (n==1)
+            return 0;
+        else
+            if (n%2==0)
+                return 1+integerReplacement(n/2);
+            else
+                return 2+min(integerReplacement(n/2+1),integerReplacement(n/2));
+    return sum;
+}
+```
+
+### 6、[二叉搜索树的范围和](https://leetcode-cn.com/problems/range-sum-of-bst/)
+
+```C
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     struct TreeNode *left;
+ *     struct TreeNode *right;
+ * };
+ */
+
+int sum, l, h;
+
+void transfer(struct TreeNode *root){
+    if(root){
+        if(root->val >=l && root->val <= h)
+            sum+=root->val;
+            transfer(root->left);
+            transfer(root->right);
+    }
+}
+int rangeSumBST(struct TreeNode* root, int low, int high){
+    l =low;
+    sum=0;
+    h=high;
+    transfer(root);
+    return sum;
+}
+```
+
+### 7、[二叉树的深度](https://leetcode-cn.com/problems/er-cha-shu-de-shen-du-lcof/),[二叉树的最大深度](https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/)
+
+```C
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     struct TreeNode *left;
+ *     struct TreeNode *right;
+ * };
+ */
+int max(int a, int b){
+    return a>b ? a: b;
+}
+
+int maxDepth(struct TreeNode* root){
+    if(root==NULL)
+        return 0;
+    return max(maxDepth(root->left), maxDepth(root->right))+1;
+}
+```
+
+### 8、[翻转二叉树](https://leetcode-cn.com/problems/invert-binary-tree/)
+
+```C
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     struct TreeNode *left;
+ *     struct TreeNode *right;
+ * };
+ */
+
+struct TreeNode* invertTree(struct TreeNode* root) {
+    if (root == NULL) {
+        return NULL;
+    }
+    struct TreeNode* left = invertTree(root->left);
+    struct TreeNode* right = invertTree(root->right);
+    root->left = right;
+    root->right = left;
+    return root;
+}
+```
+
+### 9、[所有路径](https://leetcode-cn.com/problems/bP4bmD/),[所有可能的路径](https://leetcode-cn.com/problems/all-paths-from-source-to-target/)(看不懂啊)
+
+```C
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int** ans;
+int stk[15];
+int stkSize;
+
+void dfs(int x, int n, int** graph, int* graphColSize, int* returnSize, int** returnColumnSizes) {
+    if (x == n) {
+        int* tmp = malloc(sizeof(int) * stkSize);
+        memcpy(tmp, stk, sizeof(int) * stkSize);
+        ans[*returnSize] = tmp;
+        (*returnColumnSizes)[(*returnSize)++] = stkSize;
+        return;
+    }
+    for (int i = 0; i < graphColSize[x]; i++) {
+        int y = graph[x][i];
+        stk[stkSize++] = y;
+        dfs(y, n, graph, graphColSize, returnSize, returnColumnSizes);
+        stkSize--;
+    }
+}
+
+int** allPathsSourceTarget(int** graph, int graphSize, int* graphColSize, int* returnSize, int** returnColumnSizes) {
+    stkSize = 0;
+    stk[stkSize++] = 0;
+    ans = malloc(sizeof(int*) * 16384);
+    *returnSize = 0;
+    *returnColumnSizes = malloc(sizeof(int) * 16384);
+    dfs(0, graphSize - 1, graph, graphColSize, returnSize, returnColumnSizes);
+    return ans;
+}
+```
 
