--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -378,18 +378,22 @@ bool isPowerOfTwo(int n){
 
 ```C
 bool isPowerOfThree(int n){
-    if (n==0)
-        return false;
-    if (n==1)
-        return true;
-    int tmp =  1, i = 0;
-    while(tmp < n && i <=18 ){
-        tmp *= 3;
-        i++;
-        if(tmp == n)
-            return true;
-    }
-    return false;
+    // if (n==0)
+    //     return false;
+    // if (n==1)
+    //     return true;
+    // int tmp =  1, i = 0;
+    // while(tmp < n && i <=18 ){
+    //     tmp *= 3;
+    //     i++;
+    //     if(tmp == n)
+    //         return true;
+    // }
+    // return false;
+    
+    while(n && n%3==0)
+        n /= 3;
+    return n==1;
 }
 ```
 
@@ -2123,5 +2127,728 @@ int** allPathsSourceTarget(int** graph, int graphSize, int* graphColSize, int* r
     dfs(0, graphSize - 1, graph, graphColSize, returnSize, returnColumnSizes);
     return ans;
 }
+```
+
+## C入门
+
+### C_2.3、[和为s的连续正数序列](https://leetcode-cn.com/problems/he-wei-sde-lian-xu-zheng-shu-xu-lie-lcof/)(迷迷糊糊)
+
+```C
+int** findContinuousSequence(int target, int* returnSize, int** returnColumnSizes){
+    int r=target, c=target;
+    int ** ret =(int **)malloc(sizeof(int *)*r);
+    *returnColumnSizes=(int *)malloc(sizeof(int)*r);
+
+        int i = 1, num=0;
+        double j = 2.0;
+        while(i < j) {
+            j = (-1 + sqrt(1 + 4 * (2 * target + (long) i * i - i))) / 2;
+            if(i < j && j == (int)j) {
+                // vector<int> ans;                
+                ret[num]=(int *)malloc(sizeof(int)*j);
+                for(int k = i; k <= (int)j; k++){
+                    ret[num][k-i]=k;
+                }
+                (*returnColumnSizes)[num]=j-i+1;
+                num++;
+            }
+            i++;
+        }
+    *returnSize=num;
+    return ret;
+}
+```
+
+### C_4.1、[两数相除](https://leetcode-cn.com/problems/divide-two-integers/)
+
+```C
+int divide(int dividend, int divisor){
+    int signal = 1;
+    unsigned int dvd = dividend;
+    if (dividend < 0) {
+        signal *= -1;
+        dvd = ~dvd + 1;
+    }
+
+    unsigned int dvs = divisor;
+    if (divisor < 0) {
+        signal *= -1;
+        dvs = ~dvs + 1;
+    }
+
+    int shift = 0;
+    while (dvd > dvs << shift) {
+        shift++;
+    }
+
+    unsigned int res = 0;
+    while (dvd >= dvs) {
+        while (dvd < dvs << shift) {
+            shift--;
+        }
+        res |= (unsigned int) 1 << shift;
+        dvd -= dvs << shift;
+    }
+
+    if (signal == 1 && res >= INT_MAX) {
+        return INT_MAX;
+    } else {
+        return res * signal;
+    }
+}
+```
+
+# 2022.03.15
+
+### C_7.1、[阶乘尾数](https://leetcode-cn.com/problems/factorial-zeros-lcci/)
+
+```c
+int trailingZeroes(int n){
+    int count = 0;
+    while(n >= 5){
+        n /= 5;
+        count += n;
+    }
+    return count;
+}
+```
+
+### C_7.2、[阶乘函数后 K 个零](https://leetcode-cn.com/problems/preimage-size-of-factorial-zeroes-function/)
+
+```C
+/*
+     * 按照数据规律求解
+     * 阶乘
+     * 1个5      5   1
+     * 2个5 =    25  6   实际相当于 5个1个5，然后再加25自身是两个5，所以得到的是 5+1 = 6
+     * 3个5 =    125 31  相当于5个25，然后加自身125又多了一个5 所以的（5+1）*5+1=31
+     * 按照这个规律，则后续公式可以f(2)=f(1)*5+1 f(1)=1 则 f(x+1) = f(x)*5+1  x是5的次幂数
+*/
+int preimageSizeFZF(int k){
+    //确定阶梯值范围 最终的到的K < start
+        int start = 1;
+        while (start < k){
+            start = start*5+1;
+        }
+        //确定范围后，执行精确查找
+        while (start > 1){
+            //只有5以下阶乘才会出现start-1成立，其它情况不会存在，因为任何一个阶段分界值都会包含一个以上的5
+            if(start-1 == k){
+                //不存在的返回0
+                return 0;
+            }
+            //逆推下一个阶梯值 从f(x+1) 推导出f(x)
+            start=(start-1)/5;
+
+            //获取剩余值，进行下一阶梯运算
+            k%=start;
+        }
+        //只要存在，必然是5个
+        return 5;
+}
+```
+
+### C_8.1、[转换成小写字母](https://leetcode-cn.com/problems/to-lower-case/)
+
+```c
+char * toLowerCase(char * s){
+    char *ret;
+    ret = (char *)malloc(sizeof(char)*101);
+    int i=0;
+    int tmp='A'-'a';
+    while(s[i] != '\0'){
+        if(s[i]>='A' && s[i] <='Z')            
+            ret[i]=s[i]-tmp;
+        else 
+            ret[i]=s[i];
+        i++;
+    }
+    ret[i]='\0';
+    return ret;
+}
+```
+
+### C_8.2、[检测大写字母](https://leetcode-cn.com/problems/detect-capital/)
+
+```c
+bool detectCapitalUse(char * word){
+    int i=1;
+    int flag=0;
+    if(word[0]>='A' && word[0]<='Z'){
+        flag=1;
+        if(word[1]!='\0' && word[1]>='a' && word[1]<='z')
+            flag=3;
+    }
+    else if(word[0]>='a' && word[0]<='z')
+        flag=2;
+    while(word[i] != '\0'){
+        if(flag==2||flag==3)
+            if(word[i]<'a' || word[i]>'z'){
+                flag=0;
+                break;
+            }
+        if(flag==1){
+             if(word[i]<'A' || word[i]>'Z'){
+                flag=0;
+                break;
+            }
+        }
+        i++;
+    }
+
+    return flag;
+}
+```
+
+### C_9.1、[最大连续 1 的个数](https://leetcode-cn.com/problems/max-consecutive-ones/)
+
+```c
+int max(int a, int b){
+    return a>b ? a: b;
+}
+
+int findMaxConsecutiveOnes(int* nums, int numsSize){
+    // numsSize = 0;
+    int i=0;
+    int ret=0, now_num=0;
+    while(i<numsSize){
+        if(nums[i])
+            now_num++;
+        else{
+            ret=max(ret,now_num);
+            now_num=0;
+        }
+        i++;
+    }
+    ret=max(ret,now_num);
+    return ret;
+}
+```
+
+### C_9.2、[数组中两元素的最大乘积](https://leetcode-cn.com/problems/maximum-product-of-two-elements-in-an-array/)
+
+```c
+int cmp(const void * a, const void * b){
+    return *(int *)a - *(int *)b;
+} 
+int maxProduct(int* nums, int numsSize){
+    qsort(nums, numsSize, sizeof(int), cmp);
+    return (nums[numsSize-1]-1)*(nums[numsSize-2]-1);
+}
+```
+
+### C_10.1、[子数组最大平均数 I](https://leetcode-cn.com/problems/maximum-average-subarray-i/)
+
+```c
+double max(double a, double b){
+    return a>b ? a: b;
+}
+double findMaxAverage(int* nums, int numsSize, int k){
+    double the_max=0, tmp=0;
+    int sum=0;
+    for(int i=0; i<k; i++)
+        sum+=nums[i];
+    tmp=sum;
+    the_max=tmp*1.0/k;
+
+    for(int i=1; i<=numsSize-k; i++){
+        sum=sum-nums[i-1]+nums[i+k-1];
+        tmp=sum;
+        tmp=tmp*1.0/k;
+        the_max=max(the_max, tmp);
+    }
+    return the_max;
+        
+}
+```
+
+### S_2.4、[单调数列](https://leetcode-cn.com/problems/monotonic-array/)
+
+```c
+bool isMonotonic(int* nums, int numsSize){
+    int flag1=0, flag2=0;
+    for(int i=1; i<numsSize; i++){
+        if(nums[i] > nums[i-1])
+            flag1=1;
+        if(nums[i] < nums[i-1])
+            flag2=1;
+    }
+    if(flag2+flag1==2)
+        return false;
+    else
+        return true;
+}
+```
+
+### S_2.5、[解压缩编码列表](https://leetcode-cn.com/problems/decompress-run-length-encoded-list/)
+
+```c
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int* decompressRLElist(int* nums, int numsSize, int* returnSize){
+    int * ret=(int *)malloc(sizeof(int)*100*100);
+    int all=0;
+    for(int i=0; i<numsSize; i=i+2){
+        for(int j=0; j<nums[i]; j++)
+            ret[all++]=nums[i+1];
+    }
+    *returnSize = all;
+    return ret;
+}
+```
+
+### S_2.7、[连续整数求和](https://leetcode-cn.com/problems/consecutive-numbers-sum/)(看不懂)
+
+```c
+int consecutiveNumbersSum(int N){;
+        while ((N & 1) == 0) N >>= 1;
+        int ans = 1, d = 3;
+
+        while (d * d <= N) {
+            int e = 0;
+            while (N % d == 0) {
+                N /= d;
+                e++;
+            }
+            ans *= e + 1;
+            d += 2;
+        }
+
+        if (N > 1) ans <<= 1;
+        return ans;
+}
+```
+
+### S_3.4、[旋转图像](https://leetcode-cn.com/problems/rotate-image/)
+
+```c
+void rotate(int** matrix, int matrixSize, int* matrixColSize){
+    int n= matrixSize;
+    // 转置
+    for(int i=0; i<n; i++)
+        for(int j=i+1; j<n; j++){
+            int tmp=matrix[i][j];
+            matrix[i][j]=matrix[j][i];
+            matrix[j][i]=tmp;
+        }
+    // 镜像 
+    for(int i; i<n; i++)
+        for(int j=0; j<n/2; j++){
+            int tmp=matrix[i][j];
+            matrix[i][j]=matrix[i][n-1-j];
+            matrix[i][n-1-j]=tmp;
+        }
+
+}
+```
+
+### S_3.7、[判断矩阵经轮转后是否一致](https://leetcode-cn.com/problems/determine-whether-matrix-can-be-obtained-by-rotation/)
+
+```c
+bool findRotation(int** mat, int matSize, int* matColSize, int** target, int targetSize, int* targetColSize){
+    
+    int n=matSize, flag=0;
+    for(int i=0; i<n; i++)
+        for(int j=0; j<n; j++)
+            if(target[i][j] != mat[i][j]){
+                flag=1;
+                break;
+            }  
+    // 顺时针90
+    if(flag==1)
+        for(int i=0; i<n; i++)
+            for(int j=0; j<n; j++)
+                if(target[i][j] != mat[n-1-j][i]){
+                    flag=2;
+                    break;
+                }         
+        // 180
+    if(flag==2)
+        for(int i=0; i<n; i++)
+            for(int j=0; j<n; j++)
+                if(target[i][j] != mat[n-1-i][n-1-j]){
+                    flag=3;
+                    break;
+                }
+    // // 逆时针90
+    if(flag==3)
+        for(int i=0; i<n; i++)
+            for(int j=0; j<n; j++)
+                if(target[i][j] != mat[j][n-1-i]){
+                    flag = 4;
+                    break;
+                }
+    if(flag == 4 )
+        return false;       
+         
+    return true;
+}
+```
+
+### S_3.9、[螺旋矩阵](https://leetcode-cn.com/problems/spiral-matrix/)(迷迷糊糊)
+
+```c
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int directions[4][2] = {{0, 1}, {1, 0}, {0, -1}, {-1, 0}};
+
+int* spiralOrder(int** matrix, int matrixSize, int* matrixColSize, int* returnSize) {
+    if (matrixSize == 0 || matrixColSize[0] == 0) {
+        *returnSize = 0;
+        return NULL;
+    }
+
+    int rows = matrixSize, columns = matrixColSize[0];
+    int visited[rows][columns];
+    memset(visited, 0, sizeof(visited));
+    int total = rows * columns;
+    int* order = malloc(sizeof(int) * total);
+    *returnSize = total;
+
+    int row = 0, column = 0;
+    int directionIndex = 0;
+    for (int i = 0; i < total; i++) {
+        order[i] = matrix[row][column];
+        visited[row][column] = true;
+        int nextRow = row + directions[directionIndex][0], nextColumn = column + directions[directionIndex][1];
+        if (nextRow < 0 || nextRow >= rows || nextColumn < 0 || nextColumn >= columns || visited[nextRow][nextColumn]) {
+            directionIndex = (directionIndex + 1) % 4;
+        }
+        row += directions[directionIndex][0];
+        column += directions[directionIndex][1];
+    }
+    return order;
+}
+```
+
+# 2022.03.16
+
+### S_4.1、[杨辉三角](https://leetcode-cn.com/problems/pascals-triangle/)
+
+```c
+/**
+ * Return an array of arrays of size *returnSize.
+ * The sizes of the arrays are returned as *returnColumnSizes array.
+ * Note: Both returned array and *columnSizes array must be malloced, assume caller calls free().
+ */
+int** generate(int numRows, int* returnSize, int** returnColumnSizes){
+    int ** ret=(int **)malloc(sizeof(int *)*numRows);
+    *returnSize = numRows;
+    *returnColumnSizes=(int *)malloc(sizeof(int)*numRows);
+    for(int i=0; i<numRows; i++){
+        ret[i]=(int *)malloc(sizeof(int)*(i+1));
+        (*returnColumnSizes)[i]=i+1;
+        for(int j=0; j<i+1; j++){
+            if(j==0 || i==j)
+                ret[i][j]=1;
+            else
+                ret[i][j] = ret[i-1][j] + ret[i-1][j-1]; 
+        }
+    }
+    return ret;
+}
+```
+
+### S_4.2、[杨辉三角 II](https://leetcode-cn.com/problems/pascals-triangle-ii/)
+
+```c
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int* getRow(int rowIndex, int* returnSize){
+    int numRows=rowIndex+1;
+    int ** ret=(int **)malloc(sizeof(int *)*numRows);
+    *returnSize = numRows;
+    int i;
+    for(i=0; i<numRows; i++){
+        ret[i]=(int *)malloc(sizeof(int)*(i+1));
+        for(int j=0; j<i+1; j++){
+            if(j==0 || i==j)
+                ret[i][j]=1;
+            else
+                ret[i][j] = ret[i-1][j] + ret[i-1][j-1]; 
+        }
+    }
+    return ret[i-1];
+}
+```
+
+### S_5.1、[唯一元素的和](https://leetcode-cn.com/problems/sum-of-unique-elements/)
+
+```cc
+int cnt[101];
+int sumOfUnique(int* nums, int numsSize){
+    memset (cnt, 0, sizeof(cnt));
+    int sum=0; 
+    for(int i=0; i<numsSize; i++)
+        cnt[nums[i]]++;
+    for(int i=0; i<101; i++)
+        if(cnt[i]==1)
+            sum += i;
+    return sum;
+}   
+```
+
+### S_5.2、[字符串中的第一个唯一字符](https://leetcode-cn.com/problems/first-unique-character-in-a-string/)
+
+```c
+struct data{
+    int num;
+    int place;
+}Data[256];
+int min(int a, int b){
+    return a<b ? a: b;
+}
+int firstUniqChar(char * s){
+    for(int i=0; i<256; i++)
+        Data[i].num=0;
+    int place=-1;
+    for(int i=0; s[i]!='\0'; i++){
+        Data[s[i]].num++;
+        Data[s[i]].place=i;
+    }
+    int least=100000;
+    for(int i=0; i<256; i++){
+        if(Data[i].num==1)
+            least=min(least, Data[i].place);
+    }
+    if(least == 100000)
+        return -1;
+    else 
+        return least;
+}
+```
+
+### S_5.3、[检查是否所有字符出现次数相同](https://leetcode-cn.com/problems/check-if-all-characters-have-equal-number-of-occurrences/)
+
+```c
+bool areOccurrencesEqual(char * s){
+    int * cnt[26];
+    memset(cnt, 0, sizeof(cnt));
+
+    for(int i=0; s[i]!='\0'; i++){
+        cnt[s[i]-'a']++;
+    }
+        
+    int last = s[0]-'a';
+    for(int i=0; i< 26; i++)
+        if(cnt[i]>0)
+            if(cnt[i] != cnt[last])
+                return false;
+    return true;
+}
+```
+
+# 2022.03.17
+
+### S_5.4、[找到所有数组中消失的数字](https://leetcode-cn.com/problems/find-all-numbers-disappeared-in-an-array/)
+
+```c
+/**
+ * Note: The returned array must be malloced, assume caller calls free().
+ */
+int* findDisappearedNumbers(int* nums, int numsSize, int* returnSize){
+    int cnt[numsSize+1];
+    int *ret=(int *)malloc(sizeof(int)*numsSize);
+    memset(cnt, 0, sizeof(cnt));
+    for(int i=0; i<numsSize; i++)
+        cnt[nums[i]]++;
+    int j=0;
+    for(int i=1; i<=numsSize; i++)
+        if(cnt[i]==0){
+            ret[j]=i;
+            j++;
+        }
+    *returnSize=j;
+    return ret;
+}
+```
+
+### S_5.5、[好数对的数目](https://leetcode-cn.com/problems/number-of-good-pairs/)
+
+```c
+int numIdenticalPairs(int* nums, int numsSize){
+    int cnt[101];
+    memset(cnt, 0, sizeof(cnt));
+    for(int i=0; i< numsSize; i++)
+        cnt[nums[i]]++;
+    int sum=0;
+    for(int i=1; i<101; i++)
+        if(cnt[i]>1)
+            sum += (cnt[i]*(cnt[i]-1))/2;
+    return sum;
+}
+```
+
+### S_5.6、[大餐计数](https://leetcode-cn.com/problems/count-good-meals/)
+
+```c
+int cnt[ (1<<21) + 1 ];
+int countPairs(int* deliciousness, int deliciousnessSize){
+    int i, sum = 0;
+    int ans = 0;
+    memset (cnt, 0, sizeof(cnt));                    // (1)
+
+    for(i = 0; i < deliciousnessSize; ++i) {         // (2)
+        for(sum = 1; sum <= (1<<21); sum *= 2) {     // (3)
+            int other = sum - deliciousness[i];          // (4)
+            if (other < 0) {                         // (5) 
+                continue;
+            }
+            ans += cnt[ other ];                     // (6)
+            ans %= 1000000007;
+        }
+        ++ cnt[ deliciousness[i] ];                  // (7)
+    }
+    return ans;                                      // (8)
+}
+```
+
+### S_6.1、[一周中的第几天](https://leetcode-cn.com/problems/day-of-the-week/)
+
+```c
+// 蔡勒(Zeller)公式 https://www.cnblogs.com/faterazer/p/11393521.html
+char * dayOfTheWeek(int day, int month, int year){
+    char * week[7] = {"Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"};
+    int monthDays[12] = {31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30};
+    /* 输入年份之前的年份的天数贡献 */
+    int days = 365 * (year - 1971) + (year - 1969) / 4;
+    /* 输入年份中，输入月份之前的月份的天数贡献 */
+    for (int i = 0; i < month - 1; ++i) {
+        days += monthDays[i];
+    }
+    if ((year % 400 == 0 || (year % 4 == 0 && year % 100 != 0)) && month >= 3) {
+        days += 1;
+    }
+    /* 输入月份中的天数贡献 */
+    days += day;
+    return week[(days + 3) % 7];
+}
+```
+
+### S_6.2、[一年中的第几天](https://leetcode-cn.com/problems/day-of-the-year/)
+
+```c
+bool isLeapYear(int y){
+    return (y%4==0 && y%100) || (y%400==0);
+}
+int strToInt(char *str, int len){
+    int i, sum=0;
+    for(i=0; i<len; i++)
+        sum=sum*10+(str[i]-'0');
+    return sum;
+}
+int dayOfYear(char * date){
+    int monthday[]={0, 
+        31, 28, 31, 30, 31, 30,
+        31, 31, 30, 31, 30, 31};
+    int sumday[13], i;
+    int year, month, day;
+    year=strToInt(date+0, 4);
+    month=strToInt(date+5, 2);
+    day=strToInt(date+8, 2);
+    monthday[2] = isLeapYear(year) ? 29 : 28;
+    sumday[0]=0;
+    for(int i=1; i<month; i++)
+        sumday[i] = sumday[i-1] + monthday[i];
+    return sumday[month-1]+day;
+}
+```
+
+### S_6.3、[日期之间隔几天](https://leetcode-cn.com/problems/number-of-days-between-two-dates/)
+
+```c
+bool isLeapYear(int y){
+    return (y%4==0 && y%100) || (y%400==0);
+}
+int strToInt(char *str, int len){
+    int i, sum=0;
+    for(i=0; i<len; i++)
+        sum=sum*10+(str[i]-'0');
+    return sum;
+}
+int nums(char *date){
+    int monthday[]={0, 
+        31, 28, 31, 30, 31, 30,
+        31, 31, 30, 31, 30, 31};
+    int year, month, day;
+    year=strToInt(date+0, 4);
+    month=strToInt(date+5, 2);
+    day=strToInt(date+8, 2);
+    int num=0;
+    for(int i=1971; i<year; i++)
+        if(isLeapYear(i))
+            num+=366;
+        else
+            num+=365;
+    for(int i=0; i<month; i++){
+        if(i==2)
+            monthday[2] = isLeapYear(year) ? 29 : 28;
+        num += monthday[i];
+    }
+    num += day;    
+    return num;
+}
+int daysBetweenDates(char * date1, char * date2){
+    int num1=nums(date1);
+    int num2=nums(date2);
+    return num1>num2 ? num1-num2 : num2-num1;
+}
+```
+
+### S_7.1、[回文素数](https://leetcode-cn.com/problems/prime-palindrome/)
+
+```c
+```
+
+### S_7.2、[丑数](https://leetcode-cn.com/problems/chou-shu-lcof/)
+
+```c
+
+```
+
+# 2022.03.18
+
+**结点结构体**
+
+```c
+typedef int DataType;
+struct ListNode {
+    DataType data;  // (1) 数据域：可以是任意类型，由编码的人自行指定
+    ListNode *next; // (2) 指针域：指向 后继结点 的地址；
+};
+```
+
+**创建结点**
+
+```c
+ListNode *ListCreateNode(DataType data) {
+    ListNode *node = (ListNode *) malloc ( sizeof(ListNode) ); // (1) 系统库函数malloc分配一块内存空间，用来存放ListNode即链表结点对象
+    node->data = data;		// (2) 将 数据域 置为函数传参data；
+    node->next = NULL;		// (3) 将 指针域 置空，代表这是一个孤立的 链表结点；
+    return node;			// (4) 返回这个结点的指针。
+}
+```
+
+**链表的创建 - 尾插法**
+
+```c
+ListNode *ListCreateListByTail(int n, int a[]) {
+    ListNode *head, *tail, *vtx;         // (1) 
+    int idx;                              
+    if(n <= 0)
+        return NULL;                     // (2) 
+    idx = 0;
+    vtx = ListCreateNode(a[0]);          // (3) 
+    head = tail = vtx;                   // (4)  
+    while(++idx < n) {                   // (5) 
+        vtx = ListCreateNode(a[idx]);    // (6) 
+        tail->next = vtx;                // (7) 
+        tail = vtx;                      // (8)  
+    } 
+    return head;                         // (9) 
+} 
 ```
 
