--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -2811,6 +2811,8 @@ int daysBetweenDates(char * date1, char * date2){
 
 # 2022.03.18
 
+## 链表
+
 **结点结构体**
 
 ```c
@@ -2832,23 +2834,426 @@ ListNode *ListCreateNode(DataType data) {
 }
 ```
 
-**链表的创建 - 尾插法**
+### 链表的创建 - 尾插法
+
+记录一个 **链表尾结点**，然后遍历给定数组，将数组元素一个一个插到链表的尾部，每插入一个结点，则将它更新为新的 **链表尾结点**。注意初始情况下，**链表尾结点** 为空。
 
 ```c
 ListNode *ListCreateListByTail(int n, int a[]) {
-    ListNode *head, *tail, *vtx;         // (1) 
+    ListNode *head, *tail, *vtx;    // tail     
+    // (1) head存储头结点的地址，tail存储尾结点的地址，vtx存储当前正在插入结点的地址；
     int idx;                              
     if(n <= 0)
-        return NULL;                     // (2) 
+        return NULL;                     
+    // (2) 当需要创建的元素个数为 0 时，直接返回空链表；
     idx = 0;
-    vtx = ListCreateNode(a[0]);          // (3) 
-    head = tail = vtx;                   // (4)  
-    while(++idx < n) {                   // (5) 
-        vtx = ListCreateNode(a[idx]);    // (6) 
-        tail->next = vtx;                // (7) 
-        tail = vtx;                      // (8)  
+    vtx = ListCreateNode(a[0]);          
+    // (3) 创建一个 数据域 为a[0]的链表结点；
+    head = tail = vtx;                   
+    // (4) 由于初始情况下只有一个结点，所以将链表头结点head和链表尾结点tail都置为vtx；
+    while(++idx < n) {                   
+    // (5) 从数组第 1 个元素 (0 - based) 开始，循环遍历数组；
+        vtx = ListCreateNode(a[idx]);    
+        // (6) 由于数组中第 0 个元素已经创建过了，所以这里只需要对除了第 0 个元素以外的数据创建链表结点；
+        tail->next = vtx;                
+        // (7) 结点创建出来后，将当前链表尾结点tail的 后继结点 置为vtx；
+        tail = vtx;                      
+        // (8)将最近创建的结点vtx作为新的 链表尾结点；
     } 
-    return head;                         // (9) 
+    return head;                         
+    // (9) 返回链表头结点；
 } 
 ```
+
+### 链表的创建 - 头插法
+
+```c
+ListNode *ListCreateListByHead(int n, int *a) {
+    ListNode *head = NULL, *vtx;       
+    // (1) head存储头结点的地址，初始为空链表， vtx存储当前正在插入结点的地址；
+    while(n--) {                       
+    // (2) 总共需要插入 n nn 个结点，所以采用逆序的 n nn 次循环；
+        vtx = ListCreateNode(a[n]);    
+        // (3) 创建一个元素值为a[i]的链表结点，注意，由于逆序，所以这里 i的取值为 n−1 → 0；
+        vtx->next = head;              
+        // (4) 将当前创建的结点的 后继结点 置为 链表的头结点head；
+        head = vtx;                    
+        // (5) 将链表头结点head置为vtx；
+    } 
+    return head;                       
+    // (6) 返回链表头结点；
+} 
+```
+
+### 打印链表
+
+```c
+void ListPrint(ListNode *head) {
+    ListNode *vtx = head;
+    while(vtx) {                      // (1) 从头结点开始，循环遍历所有结点；
+        printf("%d -> ", vtx->data);  // (2) 遍历到的结点，将结点的 数据域 带上->后输出;
+        vtx = vtx->next;              // (3) 将 当前结点 置为 当前结点 的 后继结点，继续迭代；
+    }
+    printf("NULL\n");                 // (4) 最后输出一个NULL，代表一个完整的链表；
+}
+```
+
+### 链表元素的索引
+
+给定一个链表头结点head，并且给定一个索引值 i ( i ≥ 0 )，求这个链表的第 i 个结点
+
+```c
+ListNode *ListGetNode(ListNode *head, int i) {
+    ListNode *temp = head;       
+    // (1) temp代表从链表头开始的 游标指针，用于对链表进行 遍历 操作；
+    int j = 0;                   
+    // (2) j代表当前访问到了第 j 个结点；
+    while(temp && j < i) {       
+        // (3) 如果 游标指针 非空，并且j < i，则代表还没访问到目标结点，继续执行循环；
+        temp = temp->next;       
+        // (4) 将 游标指针 的 后继结点 作为新一轮的 游标指针，继续迭代；
+        ++j;                     
+        // (5) j自增，等价于j = j + 1;
+    }
+    if(!temp || j > i) {
+        return NULL;             
+        // (6) 当 游标指针 为空，或者j > i，则说明给定的i超过了链表长度，返回 空结点；
+    }
+    return temp;                 
+    // (7) 最后，返回找到的第i个结点；
+}
+```
+
+索引结点的操作，最坏情况下需要遍历整个链表，所以时间复杂度为 $O(n)$。
+
+整个索引过程只记录了两个变量：**游标结点** 和 **当前索引值**。和链表长度无关，所以空间复杂度为$O(1)$。
+
+### 链表元素的查找
+
+给定一个链表头head，并且给定一个值 v ，查找出这个链表上 数据域 等于 v 的第一个结点。
+
+```c
+ListNode *ListFindNodeByValue(ListNode *head, DataType v) {
+    ListNode *temp = head;       // (1) temp代表从 链表头 开始遍历的 游标指针；
+    while(temp) {                // (2) 如果 游标指针 非空，继续循环 ；
+        if(temp->data == v) {
+            return temp;         // (3) 一旦发现 数据域 和 给定的 参数v相等，立即返回该结点对应的指针；
+        } 
+        temp = temp->next;       // (4) 否则，将 游标指针 的 后继结点 作为新一轮的 游标指针，继续迭代；
+    }
+    return NULL;                 // (5) 一直到链表尾都找不到，返回 NULL；
+}
+```
+
+查找结点的操作，最坏情况下就是找不到，需要遍历整个链表，所以时间复杂度为 $O(n)$。
+
+整个查找过程只记录了一个变量：游标指针。和链表长度无关，所以空间复杂度为$O(1)$。
+
+### 链表结点的插入
+
+给定一个链表头head，并且给定一个位置 i ( i ≥ 0 ) 和 一个值 v ，求生成一个值为 v 的结点，并且将它插入到 链表 第 i 个结点之后。
+
+```C
+ListNode *ListInsertNode(ListNode *head, int i, DataType v) {
+    ListNode *pre, *vtx, *aft;                     
+    // (1) 预先定义三个指针，当结点插入完毕后， pre -> vtx -> aft；
+    int j = 0;                                     
+    // (2) 定义一个计数器，当 j == i时，表明找到要插入的位置；
+    pre = head;                                    
+    // (3) 从 链表头结点 开始迭代遍历链表；
+    while(pre && j < i) {                          
+    // (4) 如果还没有到链表尾，或者没有找到插入位置则继续循环；
+        pre = pre->next;                           
+        // (5) 将 游标指针 的 后继结点 作为新一轮的 游标指针，继续迭代；
+        ++j;                                       
+        // (6) 计数器加 1；
+    }
+    if(!pre) { 
+        return NULL;                               
+        // (7) 元素个数不足，无法找到给定位置，返回 NULL；
+    }
+    vtx = ListCreateNode(v);                       
+    // (8) 创建一个值为v的 孤立结点；
+    aft = pre->next;                               // (9)
+    vtx->next = aft;                               // (10)
+    pre->next = vtx;                               // (11)
+    // (9)→(11) 这三步就是为了将vtx插入到pre -> aft之间，插入完毕后pre -> vtx -> aft。
+    return vtx;                                    
+    // (12) 最后，返回插入的那个结点；
+}
+```
+
+虽然插入操作本身是 $O(1)$的，但是这里有一步 索引结点 的操作，最坏情况下就是找不到对应的结点，需要遍历整个链表，所以时间复杂度为 $O(n)$。
+
+整个查找和插入的过程只记录了三个变量，和链表长度无关，所以空间复杂度为$O(1)$。
+
+### 链表结点的删除
+
+给定一个链表头head，并且给定一个位置 i ( i ≥ 0 )，将位置为 i 的结点删除，并且返回新链表的头结点（为什么要返回头结点？因为被删掉的有可能是原来的头结点）。
+
+```c
+ListNode *ListDeleteNode(ListNode *head, int i) {
+    ListNode *pre, *del, *aft;
+    int j = 0;
+    if(head == NULL) {
+        return NULL;              // (1) 空链表，无法执行删除，直接返回； 
+    }
+    if(i == 0) {                  // (2) 需要删除链表第 0 个结点；
+        del = head;               // (3) 缓存第 0 个结点；      
+        head = head->next;        // (4) 将新的 链表头结点 变为 当前头结点 的 后继结点； 
+        free(del);                // (5) 调用系统库函数free释放内存；
+        return head;              // (6) 返回新的 链表头结点； 
+    }
+    
+    pre = head;                   // (7) 从 链表头结点 开始遍历链表； 
+    while(pre && j < i - 1) {     // (8) 找到将要被删除结点的 前驱结点pre； 
+        pre = pre->next;
+        ++ j;
+    }
+    if(!pre || !pre->next) {      // (9) 如果 前驱结点 为空，或者 需要删除的结点 为空，则直接返回当前 链表头结点；
+        return head;
+    }
+    del = pre->next;              // (10) 缓存需要删除的结点到del；
+    aft = del->next;              // (11) 缓存需要删除结点的后继结点到aft；
+    pre->next = aft;              // (12) 将需要删除的结点的前驱结点指向它的后继结点；
+    free(del);                    // (13) 释放需要删除结点的内存空间；
+    return head;                  // (14) 返回链表头结点；
+} 
+```
+
+删除结点本身的时间复杂度为$O(1)$。但是由于需要查找到需要删除的结点，所以总的时间复杂度还是$O(n) $的。
+
+不需要用到额外空间，所以总的时间复杂度为$O(1)$。
+
+### 链表的销毁
+
+需要将 **所有结点** 的内存空间进行释放，并且需要将 **链表的头结点** 置空。可以理解成不断删除第 0 号结点的过程，直到链表头为空位置，只是一个循环调用。
+
+```c
+void ListDestroyList(ListNode **pHead) { 
+// (1) 这里必须用二级指针，因为删除后需要将链表头置空，普通的指针传参无法影响外部指针变量； 
+    ListNode *head = *pHead;             
+    // (2) 给 链表头结点 解引用，即通过 链表头结点的地址 获取 链表头结点；
+    while(head) {                        
+    // (3) 如果链表非空，则继续循环
+        head = ListDeleteNode(head, 0);  
+    // (4) 每次迭代，删除 链表头结点，并且返回其 后继结点 作为新的 链表头结点；
+    }
+    *pHead = NULL;                       
+    // (5) 最后，将 链表头结点 置空，这样当函数返回时，传参的head才能是NULL，否则外部会得到一个内存已经释放了的 野指针；
+}
+```
+
+### 链表的优缺点
+
+**1、优点**
+
+内存分配：
+  由于是链式存储，随时增加元素随时分配内存，不需要像数组那样进行预分配存储空间；
+插入：
+  当拥有链表某个结点的指针时，在它 后继位置 插入一个新的结点的的时间复杂度为$O(1)$；
+删除：
+  当拥有链表某个结点的指针时，删除它的 后继结点 的时间复杂度为 $O(1)$；
+
+**2、缺点**
+
+索引：
+  索引第几个结点时，时间复杂度为$O(n)$；
+查找：
+  查找是否存在某个结点时，时间复杂度为$O(n)$；
+
+# 2022.03.19
+
+### [反转链表](https://leetcode-cn.com/problems/reverse-linked-list/)
+
+```c
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     struct ListNode *next;
+ * };
+ */
+
+
+struct ListNode* reverseList(struct ListNode* head){
+    struct ListNode *new=NULL, *pre = head;
+    while(pre != NULL){
+        struct ListNode *next=pre->next;
+        pre->next = new;
+        new = pre;
+        pre = next;
+    }
+    return new;
+/*
+    struct ListNode* cur = NULL, *pre = head;   // 定义一个空结点指针，代表当前结点， 定义前驱结点指向头结点
+    while (pre != NULL) {
+        struct ListNode* t = pre->next; // 定义临时结点，是前驱结点后一个结点
+        pre->next = cur;    // 前驱结点指向上一次的当前结点
+        cur = pre;      // 当前结点为前驱结点
+        pre = t;    // 将前驱的下一个结点赋值为前驱结点
+    }
+    return cur;*/
+}
+```
+
+## 蓝桥杯相关
+
+1、STM32CubeMX配置时钟
+
+![QQ截图20220319201706](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773894.png)
+
+![QQ截图20220319201840](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773892.png)
+
+### 程序设计流程
+
+#### 1.利用STM32CUBEMX生成工程框架
+
+![QQ截图20220320143521](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773890.png)
+
+![QQ截图20220320143834](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773888.png)
+
+![QQ截图20220320143941](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773885.png)
+
+![QQ截图20220320144036](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773829.png)
+
+![QQ截图20220320144329](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773803.png)
+
+![QQ截图20220320144346](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773801.png)
+
+![QQ截图20220320145208](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773799.png)
+
+在`MDK-ARM`文件夹下可能缺少启动文件`startup_stm32g431xx.s`导致工程无法编译，可以在官方提供的例程中copy过来
+
+![QQ截图20220320145602](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773797.png)
+
+![QQ截图20220320145645](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773794.png)
+
+将工程的所有文件拷贝到`Project_Source`中，作为以后的模板
+
+![QQ截图20220320145852](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773791.png)
+
+![QQ截图20220320145946](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773789.png)
+
+#### 2.利用STM32CUBEMX生成初始化代码文件
+
+配置模板的GPIO
+
+使用Cube MX重新打开配置文件
+
+![QQ截图20220320150416](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773786.png)
+
+通过CubeMX设置GPIO端口
+
+![QQ截图20220320150705](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773784.png)
+
+![QQ截图20220320150922](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773782.png)
+
+PD2默认为低电平
+
+![QQ截图20220320151029](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773780.png)
+
+#### 3.开发板测试
+
+回到`HLL_LET_01`的工程中
+
+添加中间层文件夹，创建相关文件
+
+`HLL_LET_01\Src\bsp\led\bsp_led.c`和`HLL_LET_01\Inc\bsp\led\bsp_led.h`
+
+删除`gpio.c`和`gpio.h`，并在工程中移除
+
+![QQ截图20220320152325](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773727.png)
+
+在工程中添加中间层文件夹`BSP`
+
+![QQ截图20220320152719](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647773722.png)
+
+在工程中添加中间层头文件的位置
+
+![QQ截图20220320153010](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647764680.png)
+
+往`bsp\led\bsp_led.c`移植代码
+
+将`main.c`中的`//#include "gpio.h"`改为`#include "led\bsp_led.h"`，在`bsp_led.h`中写入
+
+```c
+#include "main.h"
+void LED_Init(void);
+```
+
+在`bsp_led.c`中写入(将`Project_Source`工程中`gpio.c`的初始化代码拷贝过来，并修改函数名`MX_GPIO_Init`为`LED_Init`)
+
+```c
+#include "led\bsp_led.h"
+
+void LED_Init(void)
+{
+
+  GPIO_InitTypeDef GPIO_InitStruct = {0};
+
+  /* GPIO Ports Clock Enable */
+  __HAL_RCC_GPIOC_CLK_ENABLE();
+  __HAL_RCC_GPIOF_CLK_ENABLE();
+  __HAL_RCC_GPIOD_CLK_ENABLE();
+
+  /*Configure GPIO pin Output Level */
+  HAL_GPIO_WritePin(GPIOC, GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15|GPIO_PIN_8
+                          |GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12, GPIO_PIN_SET);
+
+  /*Configure GPIO pin Output Level */
+  HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_RESET);
+
+  /*Configure GPIO pins : PC13 PC14 PC15 PC8
+                           PC9 PC10 PC11 PC12 */
+  GPIO_InitStruct.Pin = GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15|GPIO_PIN_8
+                          |GPIO_PIN_9|GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12;
+  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
+  GPIO_InitStruct.Pull = GPIO_NOPULL;
+  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
+  HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
+
+  /*Configure GPIO pin : PD2 */
+  GPIO_InitStruct.Pin = GPIO_PIN_2;
+  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
+  GPIO_InitStruct.Pull = GPIO_NOPULL;
+  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
+  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);
+
+}
+```
+
+修改`main.c`点亮led灯
+
+```c
+  while (1)
+  {
+    /* USER CODE END WHILE */
+	// HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
+	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_14, GPIO_PIN_RESET);	// gpio15置0
+	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_SET); 	// 打开PD2 
+	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_RESET);
+    /* USER CODE BEGIN 3 */
+  }
+```
+
+## 借助*upgit*实现Typora自动上传图片
+
+1、下载`upgit` ，https://github.com/pluveto/upgit
+
+2、在https://github.com/settings/tokens设置为`upgit`专用的`token`
+
+3、编写`upgit`的配置文件`config.toml`
+
+```yaml
+rename = "{year}/{month}/upgit_{year}{month}{day}_{unix_ts}{ext}"
+[uploaders.github]
+pat = "ghp_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
+repo = "repo-name"
+username = "username"
+```
+
+4、配置`typora`
+
+![upgit](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647765700.png)
 
