--- a/日志2022.03.md
+++ b/日志2022.03.md
@@ -3097,6 +3097,10 @@ struct ListNode* reverseList(struct ListNode* head){
 }
 ```
 
+![Snipaste_2022-03-20_19-39-27](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647776405.png)
+
+![Snipaste_2022-03-20_19-40-20](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647776425.png)
+
 ## 蓝桥杯相关
 
 1、STM32CubeMX配置时钟
@@ -3231,7 +3235,7 @@ void LED_Init(void)
     /* USER CODE END WHILE */
 	// HAL_GPIO_WritePin(GPIO_TypeDef *GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
 	HAL_GPIO_WritePin(GPIOC, GPIO_PIN_14, GPIO_PIN_RESET);	// gpio15置0
-	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_SET); 	// 打开PD2 
+	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_SET); 	// 打开PD2 锁存器
 	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_2, GPIO_PIN_RESET);
     /* USER CODE BEGIN 3 */
   }
@@ -3256,4 +3260,66 @@ username = "username"
 4、配置`typora`
 
 ![upgit](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647765700.png)
+
+
+
+# 2022.03.20
+
+### 定时器
+
+![timer](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220320_1647776896.png)
+
+# 2022.03.21
+
+### 外部中断
+
+1、设置中断分组 `HAL_NVIC_SetPriorityGrouping()`
+
+2、初始化引脚为中断模式 `HAL_GPIO_Init()`
+
+3、配置GPIO中断优先级 `HAL_NVIC_SetPriority()`
+
+4、开启中断 `HAL_NVIC_EnableIRQ()`
+
+5、在中断触发作用下自动指向中断函数 `EXTI0_IRQHandler()`
+
+6、再次判断GPIO是否产生中断标志，如果产生，中断回调 `HAL_GPIO_EXTI_IRQHandler()` -> `HAL_GPIO_EXTI_Callback()`
+
+7、指向中断回调的功能 `HAL_GPIO_EXTI_Callback()`
+
+### USART串口
+
+![image-20220321154626733](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647848787.png)
+
+![发送](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647849006.png)
+
+![接收](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647849522.png)
+
+### USART1串口配置
+
+![image-20220321162018327](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647850818.png)
+
+![image-20220321162123148](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647850883.png)
+
+![image-20220321162258364](C:\Users\MOON\AppData\Roaming\Typora\typora-user-images\image-20220321162258364.png)
+
+![image-20220321162413090](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647851053.png)
+
+![image-20220321162504355](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220321_1647851104.png)
+
+# 2020.03.22
+
+学习蓝桥杯嵌入式视频
+
+# 2022.03.23
+
+### 基本定时器
+
+芯片频率/PSC(预分频寄存器)=1个周期内定时器可以记的数
+
+当定时器的计数达到`TIM_ARR`的数值时，发生定时器中断，执行中断函数，然后重新计数
+
+# 2022.03.24-2022.03.25
+
+学习蓝桥杯嵌入式视频
 
