--- a/蓝桥杯.md
+++ b/蓝桥杯.md
@@ -671,7 +671,7 @@ uint8_t num_4017=0;
 
 设置时钟预分频器为异步2分频
 
-![image-20220329152734489](C:\Users\MOON\AppData\Roaming\Typora\typora-user-images\image-20220329152734489.png)
+![image-20220329152734489](https://raw.githubusercontent.com/simoonp/upgit_picture/main/2022/03/upgit_20220329_1648554828.png)
 
 采样时间选择最高
 
